--- a/index.html
+++ b/index.html
@@ -133,9 +133,10 @@
             <h3 class="video__h3 text__h3">Как я работаю</h3>
             <p class="video__text__p text__p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и
                 вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
-            <div class="video__content"><a href="https://rutube.ru/video/41ff5395a7f90c8efa90a6a23ee2eae8/"
+            <div class="video__content"><img class="video__img" src="img/video-img.jpg" alt="Видео"><a href="https://rutube.ru/video/41ff5395a7f90c8efa90a6a23ee2eae8/"
                     target="_blank" title="Нажми на меня">
-                    <img class="video__img" src="img/video-img.jpg" alt="Видео"></a></div>
+                    <img src="img/play-button.png" alt="" class="video__btn">
+                    </a></div>
         </div>
     </section>
     <!-- Проекты -->
